--- a/jommon-view/pom.xml
+++ b/jommon-view/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>jommon</artifactId>
         <groupId>com.gunyoung</groupId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>com.gunyoung</groupId>
             <artifactId>jommon-common</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
 
         <dependency>
