--- a/jommon-common/pom.xml
+++ b/jommon-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>jommon</artifactId>
         <groupId>com.gunyoung</groupId>
-        <version>0.0.1-RB-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
 
     <artifactId>jommon-common</artifactId>
