--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,21 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.gunyoung</groupId>
+                <artifactId>jommon-api</artifactId>
+                <version>0.0.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.gunyoung</groupId>
+                <artifactId>jommon-common</artifactId>
+                <version>0.0.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.gunyoung</groupId>
+                <artifactId>jommon-view</artifactId>
+                <version>0.0.1</version>
+            </dependency>
+            <dependency>
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct</artifactId>
                 <version>${mapstruct.version}</version>
